# r8r

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.release  LICENSE  NOTICE  README.md  SECURITY_AUDIT_REPORT.md  docker-compose.yml  docker-entrypoint.sh  install.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  cla.yml  deploy-cloud.yml  release.yml  terraform-infra.yml
.internal/: .gitignore  r8r-zeptoclaw-10-10-roadmap.md
assets/: r8r-workflow.schema.json
deploy/: docker-compose.cloud.yml
docs/: API.md  ARCHITECTURE.md  CLI.md  CLIENT_DEPLOYMENT_MODEL.md  COMPETITIVE_POSITIONING.md  DEPLOYMENT.md  EDGE_DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  FAILURE_ROUTING.md  IMPROVEMENTS_OVER_N8N.md  NODE_TYPES.md  README.md  RUNNER_PLAN.md  SANDBOX_BACKENDS.md  SYMBIOTIC_AUTOMATION.md  TESTING_AND_FEATURES.md  TODO.md  USE_CASES.md  WORKFLOW_DESIGN_IMPROVEMENTS.md
docs/plans/: 2026-02-13-phase1-core-engine.md  2026-02-13-r8r-mcp-server.md  2026-02-22-sandbox-implementation.md  2026-02-22-sandbox-module-design.md  2026-02-26-firecracker-backend.md  2026-02-26-sync-execution-design.md  2026-02-26-sync-execution-plan.md  2026-02-26-timeout-retry-dag-edge-cases.md  2026-02-27-human-in-the-loop-design.md  2026-02-27-human-in-the-loop-plan.md  2026-02-27-prompt-to-workflow-design.md  2026-02-27-prompt-to-workflow-plan.md  2026-02-27-repl-design.md  2026-02-27-repl-plan.md  2026-02-27-workflow-testing-design.md  2026-02-27-workflow-testing-plan.md  2026-02-28-enterprise-gaps-plan.md
examples/: dag-edge-cases.yaml  error-handling.yaml  hello-world.yaml  multi-provider-agent.yaml  order-notification.yaml  sandbox-python.yaml  simple-test.yaml  smart-classifier.yaml  test-phase2-nodes.yaml
infra/: README.md  alb.tf  dns.tf  ecs.tf  iam.tf  main.tf  network.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
landing/: index.html  install.sh
scripts/: deploy-cloud.sh  deploy-on-vps.sh  deploy-vps.sh  push-workflow.sh  release.sh
src/: credentials.rs  error.rs  lib.rs  llm.rs  main.rs  metrics.rs  notifications.rs  schema.rs  shutdown.rs  ssrf.rs  telemetry.rs  validation.rs
src/api/: middleware.rs  mod.rs  openapi.rs  webhook.rs  websocket.rs
src/bridge/: buffer.rs  events.rs  handlers.rs  mod.rs  websocket.rs
src/cli/: diagnostics.rs  init.rs  mod.rs  output.rs
src/config/: mod.rs
src/conformance/: mod.rs
src/dashboard/: mod.rs
src/engine/: executor.rs  mod.rs  rate_limiter.rs
src/generator/: context.rs  mod.rs  prompt.rs
src/integrations/: definition.rs  loader.rs  mod.rs  node.rs  oauth2.rs  validator.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/migrate/: mod.rs
src/nodes/: agent.rs  aggregate.rs  approval.rs  circuit_breaker.rs  crypto.rs  database.rs  datetime.rs  debug.rs  dedupe.rs  email.rs  filter.rs  http.rs  if_node.rs  limit.rs  merge.rs  mod.rs  registry.rs  s3.rs  sandbox.rs  set.rs  slack.rs  sort.rs  split.rs  subworkflow.rs  summarize.rs  switch.rs  template.rs  transform.rs  types.rs  variables.rs  wait.rs
src/repl/: conversation.rs  engine.rs  input.rs  mod.rs  prompt.rs  tools.rs  tui.rs
src/sandbox/: docker.rs  firecracker.rs  mod.rs  subprocess.rs
src/storage/: dlq.rs  (+7 more)
tests/: approval_api_test.rs  audit_log_test.rs  bridge_buffer_test.rs  bridge_events_test.rs  bridge_integration_test.rs  bridge_websocket_test.rs  cli_diagnostics_test.rs  cli_flags_test.rs  cli_init_test.rs  cli_integration_test.rs  cli_output_test.rs  dag_edge_cases.rs  dlq_auto_push_test.rs  exit_code_test.rs  generator_test.rs  install_script_test.rs  integration_node_tests.rs  llm_streaming_test.rs  migrate_n8n_tests.rs  repl_conversation_test.rs  repl_input_test.rs  repl_integration_test.rs  repl_prompt_test.rs  repl_storage_test.rs  repl_tools_test.rs  retry_backoff_test.rs  sandbox_integration.rs
ui/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+83 files in other folders)
