[package]
name = "r8r"
version = "0.1.0"
edition = "2021"
description = "Agent-first Rust workflow automation engine"
license = "MIT"
repository = "https://github.com/kitakod/r8r"

[[bin]]
name = "r8r"
path = "src/main.rs"

[[bin]]
name = "r8r-mcp"
path = "src/bin/r8r-mcp.rs"

[lib]
name = "r8r"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Cron scheduling
tokio-cron-scheduler = "0.13"

# Expression evaluation
rhai = "1"

# Template rendering
regex-lite = "0.1"

# File watching
notify = "8"
notify-debouncer-mini = "0.6"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dirs = "5"

# MCP Server
rmcp = { version = "0.1", features = ["server", "transport-io"] }
schemars = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
