[package]
name = "r8r"
version = "0.1.0"
edition = "2021"
description = "Agent-first Rust workflow automation engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/qhkm/r8r"
homepage = "https://r8r-docs.pages.dev"
authors = ["Kitakod Ventures"]
keywords = ["workflow", "automation", "mcp", "agent", "orchestration"]
categories = ["asynchronous", "development-tools", "web-programming"]
readme = "README.md"

[[bin]]
name = "r8r"
path = "src/main.rs"

[[bin]]
name = "r8r-mcp"
path = "src/bin/r8r-mcp.rs"

[lib]
name = "r8r"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Cron scheduling
tokio-cron-scheduler = "0.13"

# Expression evaluation
rhai = "1"

# Template rendering
regex-lite = "0.1"

# File watching
notify = "8"
notify-debouncer-mini = "0.6"

# Encoding
base64 = "0.22"
hex = "0.4"

# Cryptography
ring = "0.17"
md5 = "0.7"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2"

# Async utilities
futures-util = "0.3"

# Redis pub/sub
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
async-trait = "0.1"
dirs = "5"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# MCP Server
rmcp = { version = "0.1", features = ["server", "transport-io"] }
schemars = "0.8"
jsonschema = "0.29"

# Caching
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
